# KimiK0

./: LICENSE  LICENSE.md  README.md
cs_aggregator/: .gitignore  pyproject.toml
cs_aggregator/cs_aggregator/: __init__.py  __main__.py  cli.py  engine.py
cs_aggregator/cs_aggregator/data/schemas/: 4.10.x.json  4.11.x.json  4.12.x.json  4.9.0.json  4.9.1.json  schema_template.json
cs_aggregator/cs_aggregator/ioc_engine/: __init__.py  behavioral_engine.py  crypto_engine.py  exporters.py  network_engine.py  ttp_mapper.py  yara_engine.py
cs_aggregator/cs_aggregator/modules/: __init__.py  beacon_parser.py  bud_analyzer.py  config_extractor.py  fragment_reassembler.py  input_handler.py  loader_extractor.py  manifest_generator.py  postex_extractor.py  reassembler.py  sleepmask_extractor.py  version_detector.py
cs_aggregator/cs_aggregator/plugins/: __init__.py  base.py  hooks.py  manager.py
cs_aggregator/cs_aggregator/plugins/builtin/: __init__.py  config_differ.py  entropy_analyzer.py  flow_analyzer.py  ioc_extractor.py  pe_analyzer.py  shellcode_fingerprinter.py  udrl_packer.py  version_audit.py  yara_scanner.py
cs_aggregator/cs_aggregator/surgery/: __init__.py  builder.py  component_ops.py  config_surgeon.py  loader_surgeon.py  payload_map.py  sleepmask_surgeon.py  validator.py
cs_aggregator/cs_aggregator/utils/: __init__.py  cross_validator.py  entropy.py  errors.py  hashing.py  output_writer.py  pe_utils.py  profile_parser.py  rich_output.py  types.py  xor_decrypt.py
cs_aggregator/tests/: conftest.py  test_engine_plugin_integration.py  test_integration.py  test_ioc_engine.py  test_modules.py  test_phase2.py  test_phase3.py  test_profile.py  test_schema_validation.py  test_surgery.py  test_utils.py
